Fix (probably) to the double payCategory issue. (#54)